[gd_scene load_steps=5 format=3 uid="uid://dmdqrhema3wj7"]

[ext_resource type="Script" uid="uid://bmtvle75qdomd" path="res://GUI/UI/ui.gd" id="1_8xvfb"]
[ext_resource type="Texture2D" uid="uid://baovr2vj1pa1a" path="res://GUI/UI/Resources/HealthDarkness1.png" id="2_7fg4t"]
[ext_resource type="Texture2D" uid="uid://8p6e5olddxco" path="res://GUI/UI/Resources/StaminaOver2.png" id="3_np8dx"]
[ext_resource type="Texture2D" uid="uid://buxcrcaxjwnh3" path="res://GUI/UI/Resources/StaminaBarTexture1.png" id="4_as8py"]

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8xvfb")

[node name="Resources" type="CanvasLayer" parent="."]

[node name="HpAndStamina" type="Panel" parent="Resources"]
offset_right = 245.0
offset_bottom = 132.0

[node name="HpImage" type="Sprite2D" parent="Resources/HpAndStamina"]
position = Vector2(66, 43)
scale = Vector2(5.15625, 5)
texture = ExtResource("2_7fg4t")

[node name="HpLabel" type="Label" parent="Resources/HpAndStamina"]
layout_mode = 0
offset_left = 128.0
offset_top = 14.0
offset_right = 232.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 40
text = "value"
horizontal_alignment = 1

[node name="StaminaBar" type="TextureProgressBar" parent="Resources/HpAndStamina"]
layout_mode = 0
offset_left = 17.0
offset_top = 80.0
offset_right = 237.0
offset_bottom = 128.0
min_value = 1.0
value = 50.0
texture_over = ExtResource("3_np8dx")
texture_progress = ExtResource("4_as8py")
texture_progress_offset = Vector2(8, 19)

[node name="Element" type="Panel" parent="Resources"]
offset_left = 532.0
offset_top = 443.0
offset_right = 683.0
offset_bottom = 647.0

[node name="ElementLabel" type="Label" parent="Resources/Element"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 150.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 30
text = "VALUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Energy" type="Label" parent="Resources/Element"]
layout_mode = 0
offset_left = 12.0
offset_top = 73.0
offset_right = 137.0
offset_bottom = 128.0
text = "LightValue"
